corpus/main.txt
===================================
Extends
===================================
//- page-a.pug
extends layout.pug
---
(source_file
  (tbd)
  (extends_statement
    (path)))

===================================
Includes
===================================
doctype html
html
  include includes/head.pug
  body
    h1 My Site
    p Welcome to my super lame site.
    include includes/foot.pug
---
(source_file
  (tbd)
  (include_statement
    (path))
  (tbd)
  (include_statement
    (path)))

===================================
Link Tag
===================================
doctype html
html
  head
    title LogRocket Pug Example
    link(rel='stylesheet' href='https://getbootstrap.com/docs/4.4/dist/css/bootstrap.min.css')
---
(source_file
  (tbd)
  (link_tag
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))))

===================================
Script Tag
===================================
script(src='/javascripts/app.js')
script(src='https://code.jquery.com/jquery-3.4.1.slim.min.js')
---

(source_file
  (script_tag
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value))))
  (script_tag
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))))

===================================
Script Tag - raw_text
===================================
script.
  if (usingPug)
    console.log('you are awesome')
  else
    console.log('use pug')
---
(source_file
  (script_tag
    (raw_text)))

===================================
Style Tag - raw_text
===================================
style(media='screen', lang='scss').
  body {
    background-color: {{themeColor}};
  }
---
(source_file
  (style_tag
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)))
    (raw_text)))
